<resources>
    <string name="app_name">NavBottomNavSheetDialogDrawerArgsLink</string>
    <string name="next">next</string>
    <string name="first_fragment">First Fragment</string>
    <string name="previous">previous</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="bottom_sheet">bottom sheet</string>
    <string name="share">share</string>
    <string name="settings">settings</string>
    <string name="cancel">cancel</string>
    <string name="submit">submit</string>
    <string name="rate">RATE</string>
    <string name="open_dialog">open dialog</string>
    <string name="write_here">Write Here</string>
</resources>